Remove LabelPropagationProcTest